# General_knowledge_quiz_project

./: .gitignore  CMakeLists.txt  README.md
clientFolder/: client.py  test_client.cpp
serverFolder/: game.cpp  game.h  game_logic.cpp  game_logic.h  main.cpp  nickname_handler.cpp  nickname_handler.h  player.h  questions.cpp  questions.h  server  server_utils.cpp  server_utils.h
